--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "vite-plugin-singlefile": "^2.3.0"
+    "vite": "^5.0.0"
   }
 }
