--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
+    "build:usb": "vite build --mode usb",
     "preview": "vite preview --port 3000",
     "start": "vite --port 3000",
     "dev:backend": "..\\venv\\Scripts\\python.exe ..\\catalogos\\app.py"
@@ -28,6 +29,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-singlefile": "^2.3.0"
   }
 }
