--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
 flask==3.0.0
 flask-cors==4.0.0
 flask-sqlalchemy==3.1.1
-python-dotenv==0.21.0
 google-generativeai==0.5.4
+gunicorn==21.2.0
+python-dotenv==0.21.0
 pytest==8.2.2
 reportlab==4.4.4
-gunicorn==21.2.0
+sqlalchemy==2.0.44
 uvicorn==0.27.1
+werkzeug==3.1.4
