--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.0.0
 flask-cors==4.0.0
 flask-sqlalchemy==3.1.1
-google-generativeai==0.5.4
+google-generativeai>=0.8.3
 gunicorn==21.2.0
 python-dotenv==0.21.0
 pytest==8.2.2
